-------------------------------------------------------------------------
Changes in 2.7 (Not yet released):

Brief summary :
  - Improvements for the plugin handling to simplify Bochs extensions
  - Added "multiple NICs" support to the NE2000 and E1000 devices
  - Added experimental FTP service for networking modules 'vnet' and 'socket'
  - Fixes and improvements for all supported Voodoo graphics adapters
  - Added USB keyboard emulation with most of the keys supported
  - GUI "cmdmode": create a headerbar event with key combo starting with F7
  - LGPL'd VGABIOS updated to version 0.8a (new VGABIOS for Voodoo Banshee)

Detailed change log :

- General
  - Improved plugins handling: all available plugins in path are detected at
    startup (including externally developed ones). These types are supported in
    Bochs configuration: config interfaces, display libraries, VGA compatile
    adapters, optional PCI/ISA devices, pluggable USB devices, disk image,
    networking and sound driver modules.
  - Save/Restore bugfixes
  - Removed legacy "load32bitOShack" feature.
  - Removed "svga" display library designed for the obsolete Linux SVGALib.

- Configure and compile
  - Added example shortcut script for cross compiling on Linux for Windows.
  - Visual Studio workspace files upgraded to VS2019 format.

- Config interface
  - The config interfaces 'textconfig' and 'win32config' are now plugins.
  - Switch config interface to 'textconfig' at runtime in case the gui doesn't
    support dialogs (rfb and vncsrv on Windows).

- CPU/CPUDB
  - Bugfixes for CPU emulation correctness (CPUID/VMX/SVM fixes to support Windows Hyper-V as guest in Bochs)
  ! CPUID: Added TigerLake CPU definition (features CET and CLWB support)

- Memory
  - Improved BIOS write support by implementing Intel(tm) flash chip emulation.

- Bochs Debugger and Instrumentation
  - Switching to new internal instruction disassembler implementation based on Bochs internal instruction decoder.