@@ -2,6 +2,7 @@
 Changes in 2.7 (Not yet released):
 
 Brief summary :
+  - Bugfixes for CPU emulation correctness (CPUID/VMX/SVM fixes to support Windows Hyper-V as guest in Bochs)
   - Improvements for the plugin handling to simplify Bochs extensions
   - Added "multiple NICs" support to the NE2000 and E1000 devices
   - Added experimental FTP service for networking modules 'vnet' and 'socket'
